--- a/photobooth/html/photobooth.html
+++ b/photobooth/html/photobooth.html
@@ -24,9 +24,15 @@
         openEventBridge(function () {
           emit("onLoad", {value: "faye"});
           
+          var elModelURL = document.getElementById("model-url");
+          var elReloadModelButton = document.getElementById("reload-model-button");
           var elCamera = document.getElementById("property-camera");
           var elLightingPreset = document.getElementById("property-lighting-preset");
           var elPictureButton = document.getElementById("picture-button");
+
+          elReloadModelButton.addEventListener('click', function() {
+              emit("onClickReloadModelButton", {value: elModelURL.value});
+          });
           elCamera.addEventListener('change', function() {
               emit("onSelectCamera", {value: this.value});
           });
@@ -36,6 +42,7 @@
           elPictureButton.addEventListener('click', function() {
               emit("onClickPictureButton", {value: "faye"});
           });
+
 
         });
 
@@ -128,9 +135,10 @@
   </head>
   <body onload="loaded()">
     <div id="properties-list">
-      <div class="property url">
+      <div class="property url refresh">
         <label>Model URL</label>
-        <input type="text"></input>
+        <input type="text" id="model-url"></input>
+        <input type="button" id="reload-model-button" class="glyph" value="F">
       </div>
       <div class="property dropdown">
         <label>Lighting Preset</label>
@@ -150,7 +158,7 @@
         </select>
       </div>
       <div class="property">
-        <input type="button" class="blue" id="picture-button" value="Take Picture">
+        <input id="picture-button" type="button" class="blue" value="Take Picture">
       </div>
     </div>
   </body>
