--- a/gemstoneMagicMaker/gemstoneMagicMaker.html
+++ b/gemstoneMagicMaker/gemstoneMagicMaker.html
@@ -122,10 +122,10 @@
         </div>
         <div class="content">
             <p>Pick a gemstone from our curated collection:<p>
-            <p><input type="button" class="gemstone-button" value="Gemstone 1"></p>
-            <p><input type="button" class="gemstone-button white" value="Gemstone 2"></p>
-            <p><input type="button" class="gemstone-button red" value="Gemstone 3"></p>
-            <p><input type="button" class="gemstone-button blue" value="Gemstone 4"></p>
+            <p><input type="button" class="gemstone-button white" value="Emerald"></p>
+            <p><input type="button" class="gemstone-button red" value="Ruby"></p>
+            <p><input type="button" class="gemstone-button blue" value="Sapphire"></p>
+            <p><input type="button" class="gemstone-button white" value="Quartz"></p>
         </div>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
