--- a/gemstoneMagicMaker/gemstoneMagicMaker.html
+++ b/gemstoneMagicMaker/gemstoneMagicMaker.html
@@ -146,7 +146,7 @@
                         "type": "click",
                         "data": this.value
                     };
-                    EventBridge.emitWebEvent(JSON.stringify(clickEvent);
+                    EventBridge.emitWebEvent(JSON.stringify(clickEvent));
                 });
             }
 
